# lcpoly

./: CMakeLists.txt
.svn/: wc.db
Model_Documentation/: potential.tex  style.tex
analysis/: charge.cpp
py/: persistence_length.py  plot_RG.py  radius_of_gyration.py
src/: Box.hpp  Disk.hpp  Grid.h  Makefile  Polymer.h  Sim.cpp  Sim.hpp  defs.h  input  main.cpp
viz/povray/: Makefile  disks.xyz  lmp2pov.c
